# naust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  security.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: docker-build-check.yml  docker-publish.yml  frontend-release.yml  go-ci.yml  project-release.yml  python-ci.yml  typescript-check.yml
api/: mailinabox.yml
conf/: dovecot-mailboxes.conf  ios-profile.xml  nginx-filebrowser.conf  nginx-primaryonly.conf
conf/fail2ban/: jails.conf
conf/fail2ban/filter.d/: miab-filebrowser.conf  miab-oxi-email.conf
conf/zpush/: backend_combined.php
daemon/: coverage.sh  dev.sh  go.mod  go.sum
daemon/cmd/apigen/: main.go
daemon/cmd/boxctl/: bootstrap.go  bootstrap_test.go  demo.go  doctor.go  doctor_helpers_test.go  doctor_test.go  env.go  main.go  recover.go  recover_test.go  status.go  status_test.go
daemon/cmd/helperd/: main.go  main_test.go
daemon/cmd/managerd/: main.go  main_test.go
daemon/cmd/muninweb/: main.go  main_test.go
daemon/internal/acmeprov/: acmeprov.go  acmeprov_test.go  dns01.go  dns01_test.go  drift_test.go  fakeca_test.go  issue.go  issue_test.go  manual.go  manual_test.go  pebble_test.go  selector.go  solver.go  status.go  status_test.go
daemon/internal/adminops/: adminops.go  adminops_test.go
daemon/internal/api/: api.go
daemon/internal/apigen/: apigen.go  apigen_test.go
daemon/internal/atomicfile/: atomicfile.go  atomicfile_test.go
daemon/internal/auth/: password.go  password_test.go  session.go  session_test.go  token.go  token_test.go  totp.go  totp_test.go
daemon/internal/backup/: config.go  duplicity.go  duplicity_test.go  engine.go  engine_test.go  restic.go  restic_test.go  tool.go
daemon/internal/boxconf/: boxconf.go  boxconf_test.go
daemon/internal/checks/: all.go  checks.go  checks_backup.go  checks_backup_test.go  checks_dns.go  checks_dns_test.go  checks_http.go  checks_routing_test.go  checks_services.go  checks_system.go  checks_tls.go  checks_tls_test.go  checks_unit_test.go  cloudflare_ranges.go  cloudflare_ranges_test.go  config.go  engine.go  engine_test.go  metrics.go  metrics_test.go  report.go  report_test.go  reporter.go
daemon/internal/checkview/: checkview.go  checkview_test.go
daemon/internal/dns/: dns.go  dns_test.go  zonebuild.go  zonebuild_test.go  zonefile.go  zonefile_test.go
daemon/internal/dnsapply/: apply.go  apply_test.go  dnssec.go  dnssec_test.go  tlsinputs_test.go
daemon/internal/dnsprovider/: cloudflare.go  digitalocean.go  dnsprovider.go  dnsprovider_test.go  edgecase_test.go  hetzner.go
daemon/internal/helper/: allowlists.go  allowlists_test.go  client.go  client_test.go  exec.go  intents.go  intents_test.go  protocol.go  server.go  server_test.go  websync.go  websync_test.go
daemon/internal/httpapi/: aliases.go  aliases_test.go  authsurface_test.go  backup.go  backup_test.go  bootstrap.go  bootstrap_test.go  cookie_test.go  dns_test.go  dnsproviders.go  dnsproviders_test.go  dnsrecords.go  encryption.go  encryption_prf.go  encryption_prf_test.go  encryption_test.go  limiter.go  mfa.go  relay.go  relay_test.go  server.go  server_test.go  ssl.go  ssl_test.go  status.go  (+16 more)
daemon/systemd/: naust-helper.service  naust-managerd.service  naust-muninweb.service
deploy/docker/: .env.example  common-entrypoint.sh  docker-compose.yml  systemctl-stub.sh
frontend/: index.html  package.json  vite.config.ts
frontend/public/: boot.js
frontend/src/: types.ts
management/: auth.py  backup.py  cli.py  compile_templates.sh  compiled_index.html  daemon.py  dns_update.py  mailconfig.py  mfa.py  status_checks.py
management/auth/: api_tokens.py  auth.py  mfa.py
management/core/: app_context.py  auth_decorators.py  cli.py  daemon.py  utils.py  web_helpers.py  wsgi.py
management/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
management/mail/: email_administrator.py
management/oxi/: 2_miab_oxi_ui_patch.patch  4_miab_oxi_empty_states_patch.patch
management/scripts/: daily_tasks.py
management/services/: control_plane.py  web_update.py
management/templates/: aliases.html  custom-dns.html  external-dns.html  index.html  login.html  mail-guide.html  mfa.html  ssl.html  sync-guide.html  system-backup.html  system-status.html  users.html  web.html  welcome.html
setup/: bootstrap.sh  dkim.sh  dns.sh  filebrowser.sh  functions.sh  install.sh  mail-dovecot.sh  mail-postfix.sh  management.sh  migrate.py  munin.sh  nextcloud.sh  spamassassin.sh  start.sh  system.sh  web.sh  webmail.sh  zpush.sh
setup/boxctl/: __main__.py  bootstrap.py  checks.py  docker.py  doctor.py  install.py  questions.py  runner.py  ui.py
setup/components/: artifacts.py  component.py  gobuild.py  install_packages.py  packages.py  runner.py  task_names.py
setup/tools/: dns_update  editconf.py  export_dav.py  ssl_cleanup  web_update
tests/: fail2ban.py
tests/boxctl/: test_ansi_re.py  test_checks_relay.py  test_component_sequences.py  test_component_targets.py  test_load_conf.py  test_validators.py
tests/components/: _helpers.py  conftest.py  test_setup_paths.py
tests/control_socket/: test_handler_execution.py  test_request_parsing.py  test_service_validation.py
tests/tools/: test_editconf.py
(+509 files in other folders)
